--- a/purchase_indonesia_inventory_manage/views/view_purchase_indonesia_good_return.xml
+++ b/purchase_indonesia_inventory_manage/views/view_purchase_indonesia_good_return.xml
@@ -152,7 +152,7 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{"search_default_requested_by":uid}</field>
-            <!--<field name="search_view_id" ref="view_purchase_request_search"/>-->
+            <field name="search_view_id" ref="view_procur_goods_return_search"/>
             <field name="help" type="html">
               <p class="oe_view_nocontent_create">
                 Click to start a new procurement good return process.
