--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -115,11 +115,11 @@
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
-                     <label for="control_unit"/>
+                     <label for="control_unit" attrs="{'invisible': [('validation_budget','!=',True)]}"/>
                      <div attrs="{'invisible': [('validation_budget','!=',True)]}">
                         <field name="control_unit" class="oe_inline" string="Unit Control"/>
                      </div>
-                     <label for="budget_available"/>
+                     <label for="budget_available" attrs="{'invisible': [('validation_budget','!=',True)]}"/>
                      <div attrs="{'invisible': [('validation_budget','!=',True)]}">
                         <field name="budget_available" class="oe_inline" string="Budget Price"/>
                      </div>
