--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -392,6 +392,7 @@
           <field name="email_from">admin@palmagroup.co.id</field>
           <field name="subject">[SYS] QCF Approval ${object.complete_name}</field>
           <field name="email_to">${object.assign_to.partner_id.email}</field>
+		  <field name="email_cc">procurement.ho@palmagroup.co.id</field>
           <field name="lang">${object.lang}</field>
           <field name="model_id" ref="purchase_indonesia.model_quotation_comparison_form"/>
           <field name="auto_delete" eval="True"/>
