--- a/purchase_indonesia/reports/report_purchase_order.xml
+++ b/purchase_indonesia/reports/report_purchase_order.xml
@@ -8,19 +8,22 @@
             		<t t-call="report.internal_layout">
 						<div class="page" style="font-family: times; background-color:white; color:black;">
 		              		<!-- Header -->
-		              		<div class="row" style="text-align:left;font-size:14pt;">
+		              		<div class="row" style="text-align:left;font-size:10pt;">
 		              			<div class="col-xs-12" >
-		                       		<table class="noborder">
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="10%">
+		                       		<table class="noborder" width="100%" style="padding:10px">
+		                       		    <tr>
+		                       		        <td width="10%">
 		                       		            <b>Date</b>
 		                       		        </td>
-		                       		        <td class="noborder">
+		                       		        <td width="50%" class="noborder">
 		                       		            <b>: <span t-field="o.date_order" t-field-options="{&quot;format&quot;: &quot;dd MMMM yyyy&quot;}"/></b>
 		                       		        </td>
+		                       		        <td width="40%" class="noborder">
+		                       		            &#160;
+		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%">
+		                       		    <tr>
+		                       		        <td width="20%">
 		                       		            <t t-if="o.request_id.type_product == 'service' ">
 													<b>SPO No.</b>
 												</t>
@@ -28,73 +31,62 @@
 													<b>PO No.</b>
 												</t>
 		                       		        </td>
-		                       		        <td class="noborder">
+		                       		        <td class="noborder" colspan="2">
 		                       		            <b>: <span t-field="o.complete_name"/></b>	
 		                       		        </td>
 		                       		    </tr>
-		                       		    <!--<tr style="height:30px;">-->
-		                       		        <!--<td class="noborder" width="20%">-->
-		                       		            <!--<b>Page</b>-->
-		                       		        <!--</td>-->
-		                       		        <!--<td class="noborder">-->
-		                       		            <!--<b>: </b>-->
-		                       		        <!--</td>-->
-		                       		    <!--</tr>-->
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%">
+		                       		    <tr>
+		                       		        <td width="20%">
 		                       		            <b>To</b>
 		                       		        </td>
-		                       		        <td class="noborder">
+		                       		        <td class="noborder" colspan="2">
 		                       		          	<b>: <span t-field="o.partner_id.name"/></b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%" valign="top">
+		                       		    <tr>
+		                       		        <td width="20%" valign="top">
 		                       		            <b>Address</b>
 		                       		        </td>
-		                       		        <td class="noborder">
+		                       		        <td class="noborder" colspan="2">
 		                       		            : <b>
 		                       		            	<span t-field="o.partner_id.street"/>
 		                       		            	<br/>
-		                       		            	<span t-field="o.partner_id.street2"/>
-		                       		            	<br/>
-		                       		            	<span t-field="o.partner_id.zip"/>
-		                       		            	<br/>
-		                       		            	<span t-field="o.partner_id.city"/>
+		                       		            	&#160;&#160;<span t-field="o.partner_id.street2"/>&#160;<span t-field="o.partner_id.zip"/>&#160;<span t-field="o.partner_id.city"/>
 		                       		          	</b>
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" colspan="2">
+		                       		    <tr>
+		                       		        <td colspan="3">
 		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%">
+		                       		    <tr>
+		                       		        <td width="20%">
 		                       		            <b>Attn</b>
 		                       		        </td>
 		                       		        <td class="noborder">
 		                       		            <b>: <span t-field="o.confirmed_by_person"/> </b>
 		                       		        </td>
+		                       		        <td style="border-left:1px solid;border-top:1px solid;border-right:1px solid;">
+		                       		            <b>Reff PP :</b>
+		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%">
+		                       		    <tr>
+		                       		        <td width="20%">
 		                       		            <b>Phone</b>
 		                       		        </td>
 		                       		        <td class="noborder">
 		                       		            : <b> <span t-field="o.partner_id.phone"/></b>
 		                       		        </td>
+		                       		        <td style="border-left:1px solid;border-bottom:1px solid;border-right:1px solid;">
+		                       		            <b><span t-field="o.source_purchase_request"/></b>
+		                       		        </td>
 		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" width="20%">
+		                       		    <tr>
+		                       		        <td width="20%">
 		                       		            <b>Confirmed By</b>
 		                       		        </td>
-		                       		        <td class="noborder">
+		                       		        <td class="noborder" colspan="2">
 		                       		         	: <b><span t-field="o.confirmed_by"/> (<span t-field="o.confirmed_by_value"/>)</b>
-		                       		        </td>
-		                       		    </tr>
-		                       		    <tr style="height:30px;">
-		                       		        <td class="noborder" colspan="2" style="text-align: right;">
-		                       		            <b>Reff PP : <span t-field="o.source_purchase_request"/></b>
 		                       		        </td>
 		                       		    </tr>
 		                       		</table>
@@ -104,8 +96,8 @@
 							<br></br>
 							<br></br>
 							
-							<div class="row" style="text-align:center; font-size:20pt;">
-		              			<div class="col-xs-12" >
+							<div class="row" style="text-align:center; font-size:16pt;">
+		              			<div style="border-top:2px solid;border-bottom:2px solid;" class="col-xs-12" >
 									<t t-if="o.request_id.type_product == 'service' ">
 										<b>SERVICE PURCHASE ORDER (SPO)</b>
 									</t>
@@ -119,96 +111,116 @@
 							<br></br>
 							
 							<!-- Variabel -->
-							
+		           			<t t-set="idx_row" t-value="0"/>
+		           			<t t-set="max_row" t-value="[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]"/>
+							<t t-set="idx_max_row" t-value="0"/>
+		           			
 		              		<!-- Detail Header -->
-		           			<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		           			<div class="row" style="text-align:left;font-size:10pt;">
+		              			<table style="border: 1px solid;padding:10px" width="100%">
 		                            <thead>
 			                            <tr class="label_table_header">
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;" valign="center">
 										      CODE
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;" valign="center">
 										      DESCRIPTION
 										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;" valign="center">
 										      QTY
 										    </th>
-										    <th>
-										      UOM
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;" valign="center">
+										      PRICE&#160;/&#160;UNIT
 										    </th>
-										    <th>
-										      PRICE/UNIT
-										    </th>
-										    <th>
+										    <th style="border:1px solid;border-bottom:1px solid;height:30px;text-align: center;" valign="center">
 										      TOTAL
 										    </th>
 										</tr>
 									</thead>
 									<tbody>
 										<t t-foreach="o.order_line" t-as="l">
-											<tr>
-											    <td>
+										    <t t-set="idx_row" t-value="idx_row+1"/>
+										    <tr>
+											    <td style="border-right:1px solid;height:25px;" align="center" valign="center">
 											      	<span t-field="l.product_id.default_code"/>
 											    </td>
-											    <td>
+											    <td style="border-right:1px solid;height:25px;" valign="center">
 											      	<span t-field="l.product_id.name"/>
 											    </td>
-											    <td align="center">
-											      	<span t-field="l.product_qty"/>
+											    <td  style="border-right:1px solid;height:25px;" align="center" valign="center">
+											      	<span t-field="l.product_qty"/>&#160;<span t-field="l.product_uom"/>
 											    </td>
-											    <td align="center">
-											      	<span t-field="l.product_uom"/>
-											    </td>
-											    <td align="right">
+											    <td  style="border-right:1px solid;height:25px;" align="right" valign="center">
 											      	<span t-field="l.price_unit"/>
 											    </td>
-											    <td align="right">
+											    <td style="height:25px;" align="right" valign="center">
 											      	<span t-field="l.price_subtotal"/>
 											    </td>
 											</tr>
 										</t>
+										<t t-foreach="max_row" t-as="m">
+										    <t t-set="idx_max_row" t-value="idx_max_row+1"/>
+										    <t t-if="idx_max_row > idx_row">
+												<tr>
+												    <td style="border-right:1px solid">
+												      	&#160;
+												    </td>
+												    <td style="border-right:1px solid">
+												      	&#160;
+												    </td>
+												    <td  style="border-right:1px solid" align="center">
+												      	&#160;
+												    </td>
+												    <td  style="border-right:1px solid" align="right">
+												      	&#160;
+												    </td>
+												    <td align="right">
+												      	&#160;
+												    </td>
+												</tr>
+											</t>
+										</t>
 										
 										<tr>
-										    <td colspan="4">
+										    <td style="border-top:1px solid" colspan="3">
 										        &#160;
 										    </td>
-										    <td>
+										    <td style="border-top:1px solid;border-left:1px solid;">
 										      	Sub Total
 										    </td>
-										    <td align="right">
+										    <td style="border-top:1px solid;border-left:1px solid;" align="right">
 										      	<span t-field="o.amount_untaxed"/>
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="4">
+										    <td colspan="3">
 										        &#160;
 										    </td>
-										    <td>
+										    <td style="border-top:1px solid;border-left:1px solid;">
 										      	Tax
 										    </td>
-										    <td align="right">
+										    <td style="border-top:1px solid;border-left:1px solid;" align="right">
 										      	<span t-field="o.amount_tax"/>
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="5" style="text-align: center;">
+										    <td colspan="4" style="border-top:1px solid;text-align: center;">
 										      	GRAND TOTAL
 										    </td>
-										    <td align="right">
+										    <td align="right" style="border-top:1px solid;border-left:1px solid;">
 										      	<span t-field="o.amount_total"/>
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
+										    <td colspan="2" style="border-top:1px solid; border-right: 1px solid black;">
 										      	Delivery 	:
 										    </td>
-										    <td colspan="3" class="noborder" align="center">
+										    <td colspan="3" style="border-top:1px solid;" align="center">
 										      	<u>PAYMENT</u>
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
+										    <td colspan="2" style="border-right: 1px solid black;">
 										      	<span t-field="o.picking_type_id.warehouse_id.name"/>
 										    </td>
 										    <td colspan="3" class="noborder">
@@ -216,7 +228,15 @@
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
+										    <td colspan="2" style="border-right: 1px solid black;">
+										      	&#160;
+										    </td>
+										    <td colspan="3" class="noborder">
+										      	&#160;
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="2"  style="border-right: 1px solid black;">
 										      	Address 	:
 										    </td>
 										    <td colspan="3" class="noborder">
@@ -224,7 +244,7 @@
 										    </td>
 										</tr>
 										<tr>
-										    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
+										    <td colspan="2"  style="border-right: 1px solid black;">
 										      	<span t-field="o.picking_type_id.warehouse_id.partner_id.street"/>
 	                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.street2"/>
 	                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.zip"/>
@@ -234,38 +254,46 @@
 										      	Currency	: <span t-field="o.currency_id"/>
 										    </td>
 										</tr>
+										<tr>
+										    <td colspan="2" style="border-right: 1px solid black;">
+										      	&#160;
+										    </td>
+										    <td colspan="3" class="noborder">
+										      	&#160;
+										    </td>
+										</tr>
 									</tbody>
 								</table>
-								<table width="100%">
+								<table style="border: 1px solid;padding:10px" width="100%">
 		                            <tr>
-		                          		<td class="noborder" width="25%">
+		                          		<td style="border-right: 1px solid;" width="25%">
 		                          		    Distribution	:
 		                          		</td>
-		                          		<td class="noborder" style="text-align: center;">
+		                          		<td style="text-align: center;">
 		                          		    Approved by,
 		                          		</td>
 		                          	</tr>      
 								    <tr>
-		                          		<td class="noborder" width="25%">
+		                          		<td style="border-right: 1px solid;" width="25%">
 		                          		    1. Vendor
 		                          		</td>
-		                          		<td class="noborder" style="text-align: center;">
+		                          		<td style="text-align: center;">
 		                          		    &#160;
 		                          		</td>
 		                          	</tr>
 		                          	<tr>
-		                          		<td class="noborder" width="25%">
+		                          		<td style="border-right: 1px solid;" width="25%">
 		                          		    2. Accounting
 		                          		</td>
-		                          		<td class="noborder" style="text-align: center;">
+		                          		<td style="text-align: center;">
 		                          		    &#160;
 		                          		</td>
 		                          	</tr>
 		                          	<tr>
-		                          		<td class="noborder" width="25%" valign="top">
+		                          		<td style="border-right: 1px solid;" width="25%" valign="top">
 		                          		    3. File
 		                          		</td>
-		                          		<td class="noborder" style="text-align: center;">
+		                          		<td style="text-align: center;">
 		                          		    <t t-foreach="o.message_ids" t-as="mids">
 												<t t-foreach="mids.tracking_value_ids" t-as="mids_tracking">
 												    <t t-if="mids_tracking.field == 'state' and mids_tracking.new_value_char == 'Purchase Order'">
@@ -288,10 +316,10 @@
 		                          		</td>
 		                          	</tr>
 		                          	<tr>
-		                          		<td class="noborder" width="25%">
+		                          		<td style="border-right: 1px solid;" width="25%">
 		                          		    &#160;
 		                          		</td>
-		                          		<td class="noborder" style="text-align: center;">
+		                          		<td style="text-align: center;">
 		                          		    
 		                          		</td>
 		                          	</tr>
